# SPDX-License-Identifier: Unlicense

# Test app. Start WindowsPipeTestServer.py! if(${SCREENPLAY_TESTS}) add_executable(WindowsPipeTest WindowsPipe.cpp WindowsPipe.h
# WindowsPipeTest.cpp) target_link_libraries(WindowsPipeTest PRIVATE Catch2::Catch2 Catch2::Catch2WithMain)
# target_include_directories(WindowsPipeTest PRIVATE "src") endif()
